--- a/prod/index.html
+++ b/prod/index.html
@@ -9,22 +9,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./normalize.min.css">
-    <link rel="stylesheet" href="./main.css">
+    <link href="./fonts/Jura-Bold.ttf" rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.min.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 
 <main class="app-body">
     <div class="wrapper">
 
-        <div class="">
+        <div class="linear-wipe">
             <a href="https://www.validators.app/validators/93Q99nhdKjuSe6WNXgMBbC3s8QVQEAoHKt91PNRkUkMn" target="_blank" class="link">
-                <h1 class="link-primary-text">Solana Validator</h1>
-                <h2 class="link-secondary-text">93Q99nhdKjuSe6WNXgMBbC3s8QVQEAoHKt91PNRkUkMn</h2>
+                <h3 class="">Stake SOL with</h3>
+                <h1 class="">STEVLTH</h1>
+                <h2 class="">Validator</h2>
+                <h4 class="">93Q99nhdKjuSe6WNXgMBbC3s8QVQEAoHKt91PNRkUkMn</h4>
             </a>
         </div>
-
+        
     </div>
+    <div class="solana-logo-wrap"><a href="https://solana.com" target="_blank" class=""><img src="https://solana.com/branding/new/horizontal/dark-horizontal-white.svg" class="solana-logo"/></a></div>
 </main>
 
 </body>
