--- a/prod/index.html
+++ b/prod/index.html
@@ -28,6 +28,7 @@
         
     </div>
     <div class="solana-logo-wrap"><a href="https://solana.com" target="_blank" class=""><img src="https://solana.com/branding/new/horizontal/dark-horizontal-white.svg" class="solana-logo"/></a></div>
+    <div class="bottom-line"></div>
 </main>
 
 </body>
