--- a/prod/index.html
+++ b/prod/index.html
@@ -18,7 +18,8 @@
     <div class="wrapper">
 
         <div class="linear-wipe">
-            <a href="https://www.validators.app/validators/93Q99nhdKjuSe6WNXgMBbC3s8QVQEAoHKt91PNRkUkMn" target="_blank" class="link">
+            <!-- <a href="https://www.validators.app/validators/93Q99nhdKjuSe6WNXgMBbC3s8QVQEAoHKt91PNRkUkMn" target="_blank" class="link"> -->
+            <a href="https://solana.foundation/sfdp-validators/93Q99nhdKjuSe6WNXgMBbC3s8QVQEAoHKt91PNRkUkMn" target="_blank" class="link">
                 <h3 class="">Stake SOL with</h3>
                 <h1 class="">STEVLTH</h1>
                 <h2 class="">Validator</h2>
